// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon #className 1`] = `
<svg
  aria-hidden="true"
  className="Draftail-Icon u-test"
  height="16"
  viewBox="0 0 1024 1024"
  width="16"
>
  <path
    d="M10 10 H 90 V 90 H 10 Z"
  />
</svg>
`;

exports[`Icon #icon custom 1`] = `
<CustomIcon
  icon="square"
/>
`;

exports[`Icon #icon external svg ref 1`] = `
<svg
  aria-hidden="true"
  className="Draftail-Icon "
  height="16"
  viewBox="0 0 1024 1024"
  width="16"
>
  <use
    xlinkHref="test.svg#square"
  />
</svg>
`;

exports[`Icon #icon inline svg ref 1`] = `
<svg
  aria-hidden="true"
  className="Draftail-Icon "
  height="16"
  viewBox="0 0 1024 1024"
  width="16"
>
  <use
    xlinkHref="#square"
  />
</svg>
`;

exports[`Icon #icon svg path 1`] = `
<svg
  aria-hidden="true"
  className="Draftail-Icon "
  height="16"
  viewBox="0 0 1024 1024"
  width="16"
>
  <path
    d="M10 10 H 90 V 90 H 10 Z"
  />
</svg>
`;

exports[`Icon #icon svg path array 1`] = `
<svg
  aria-hidden="true"
  className="Draftail-Icon "
  height="16"
  viewBox="0 0 1024 1024"
  width="16"
>
  <path
    d="M10 10 H 90 V 90 H 10 Z"
    key="0"
  />
  <path
    d="M10 10 H 90 V 90 H 10 Z"
    key="1"
  />
</svg>
`;

exports[`Icon #title 1`] = `
<svg
  aria-label="Test title"
  className="Draftail-Icon "
  height="16"
  role="img"
  viewBox="0 0 1024 1024"
  width="16"
>
  <path
    d="M10 10 H 90 V 90 H 10 Z"
  />
</svg>
`;
